// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeLoggable logs 1`] = `
Array [
  "%c[C] color:#28B7F6 StoreWithComputed.isDividedBy3 [object Object] -> true",
  "%c[A]%c StoreWithComputed.increment() color:#FF6157 color:inherit",
  "%c[O] color:#FFBC2D StoreWithComputed.value 0 -> 1",
  "%c[C] color:#28B7F6 StoreWithComputed.isDividedBy3 true -> false",
  "%c[A]%c StoreOnlyObservables.init() color:#FF6157 color:inherit",
]
`;

exports[`makeLoggable logs 2`] = `
Array [
  "%c[C] color:#28B7F6 StoreWithComputed.isDividedBy3 [object Object] -> true",
  "%c[A]%c StoreWithComputed.increment() color:#FF6157 color:inherit",
  "%c[O] color:#FFBC2D StoreWithComputed.value 0 -> 1",
  "%c[C] color:#28B7F6 StoreWithComputed.isDividedBy3 true -> false",
  "%c[A]%c StoreOnlyObservables.init() color:#FF6157 color:inherit",
  "%c[A]%c StoreWithComputed.increment() color:#FF6157 color:inherit",
  "%c[O] color:#FFBC2D StoreWithComputed.value 1 -> 2",
  "%c[A]%c StoreWithComputed.increment() color:#FF6157 color:inherit",
  "%c[O] color:#FFBC2D StoreWithComputed.value 2 -> 3",
  "%c[C] color:#28B7F6 StoreWithComputed.isDividedBy3 false -> true",
]
`;

exports[`makeLoggable logs array changes correctly 1`] = `
Array [
  "%c[A]%c TodoStore.addTodo(%o %o) color:#FF6157 color:inherit 1 Play balalaika",
]
`;

exports[`makeLoggable logs array changes correctly 2`] = `
Array [
  "%c[A]%c TodoStore.addTodo(%o %o) color:#FF6157 color:inherit 1 Play balalaika",
  "%c[A]%c TodoStore.markAsDone(%o) color:#FF6157 color:inherit 1",
  "%c[O] color:#FFBC2D TodoStore.todos[..].isDone false -> true",
]
`;
